--- a/portfiolio.html
+++ b/portfiolio.html
@@ -76,13 +76,23 @@
           <ul class="works__list works-examples">
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/porfolio-1-tehnocryack.jpg"
-                  alt="Внешний вид Веб-сайта Технокряк"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
+                  <img
+                    src="./images/portfolio-page/porfolio-1-tehnocryack.jpg"
+                    alt="Внешний вид Веб-сайта Технокряк"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Технокряк</h2>
                   <p class="works-examples__text">Веб-сайт</p>
@@ -91,13 +101,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-2-poster.jpg"
-                  alt="Постер баскетбольного матча New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-2-poster.jpg"
+                    alt="Постер баскетбольного матча New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Постер New Orlean vs Golden Star</h2>
                   <p class="works-examples__text">Дизайн</p>
@@ -106,13 +125,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-3-seafood.jpg"
-                  alt="Логотип ресторана Seafood"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-3-seafood.jpg"
+                    alt="Логотип ресторана Seafood"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Ресторан Seafood</h2>
                   <p class="works-examples__text">Приложение</p>
@@ -121,13 +149,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-4-prime.jpg"
-                  alt="Логотип в виде наушников проекта Prime"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-4-prime.jpg"
+                    alt="Логотип в виде наушников проекта Prime"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Проект Prime</h2>
                   <p class="works-examples__text">Маркетинг</p>
@@ -136,13 +173,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-5-boxes.jpg"
-                  alt="Логотип проекта Boxes в виде коробок"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-5-boxes.jpg"
+                    alt="Логотип проекта Boxes в виде коробок"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Проект Boxes</h2>
                   <p class="works-examples__text">Приложение</p>
@@ -151,13 +197,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-6-inspiration.jpg"
-                  alt="Внешний вид Веб-сайта Inspiration"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-6-inspiration.jpg"
+                    alt="Внешний вид Веб-сайта Inspiration"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Inspiration has no Borders</h2>
                   <p class="works-examples__text">Веб-сайт</p>
@@ -166,13 +221,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-7-edition.jpg"
-                  alt="Логотип издания Limited Edition в виде раскрытой книги"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-7-edition.jpg"
+                    alt="Логотип издания Limited Edition в виде раскрытой книги"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Издание Limited Edition</h2>
                   <p class="works-examples__text">Дизайн</p>
@@ -181,13 +245,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-8-lab.jpg"
-                  alt="Логотип проекта Lab в виде бирки"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-8-lab.jpg"
+                    alt="Логотип проекта Lab в виде бирки"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Проект LAB</h2>
                   <p class="works-examples__text">Маркетинг</p>
@@ -196,13 +269,22 @@
             </li>
             <li class="works-examples__item">
               <a href="" class="works-examples__link">
-                <img
-                  src="./images/portfolio-page/portfolio-9-business.jpg"
-                  alt="Человек работает за ноутбуком в приложении Growing Business"
-                  width="370"
-                  height="294"
-                  class="works-examples__img"
-                />
+                <div class="works-examples__tumb">
+                  <div class="work-examples__overlay">
+                    <p class="work-examples__overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img
+                    src="./images/portfolio-page/portfolio-9-business.jpg"
+                    alt="Человек работает за ноутбуком в приложении Growing Business"
+                    width="370"
+                    height="294"
+                    class="works-examples__img"
+                  />
+                </div>
                 <div class="work-examples-box">
                   <h2 class="works-examples__title">Growing Business</h2>
                   <p class="works-examples__text">Приложение</p>
