--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container nav-container">
         <nav class="header__navigation">
-          <a href="./index.html" class="logo header-logo"
+          <a href="./index.html" class="logo header-logo animate__heartBeat"
             ><span class="logo__word">Web</span>Studio</a
           >
           <ul class="header-menu-list header-menu-list__mix">
@@ -32,16 +32,19 @@
               <a href="./index.html" class="header__link header__link--current">Студия </a>
             </li>
             <li class="header-menu__item">
-              <a href="./portfiolio.html" class="header__link">Портфолио </a>
+              <a href="./portfiolio.html" class="header__link hover-effect__link">Портфолио </a>
             </li>
             <li class="header-menu__item">
-              <a href="" class="header__link link">Контакты </a>
+              <a href="#contacts" class="header__link hover-effect__link">Контакты </a>
             </li>
           </ul>
         </nav>
         <ul class="header-contact-list header-contact-list__mix">
           <li class="header-contact-list__item">
-            <a href="mailto:info@devstudio.com" class="header__link contact-list__link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header__link contact-list__link hover-effect__link"
+            >
               <svg class="mail-icon">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -49,7 +52,10 @@
             </a>
           </li>
           <li class="header-contact-list__item">
-            <a href="tel:+380961111111" class="header__link contact-list__link link">
+            <a
+              href="tel:+380961111111"
+              class="header__link contact-list__link link hover-effect__link"
+            >
               <svg class="tel-icon">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
@@ -144,6 +150,10 @@
               />
               <div class="about-list--tumb">
                 <h3 class="about__list--title">Десктопные приложения</h3>
+                <p class="about__list--text">
+                  Программа, которая устанавливается на компьютер пользователя и работает под
+                  управлением операционной системы.
+                </p>
               </div>
             </li>
             <li class="about__item">
@@ -156,6 +166,10 @@
               />
               <div class="about-list--tumb">
                 <h3 class="about__list--title">Мобильные приложения</h3>
+                <p class="about__list--text">
+                  Программное обеспечение, предназначенное для работы на смартфонах, планшетах и
+                  других мобильных устройствах.
+                </p>
               </div>
             </li>
             <li class="about__item">
@@ -168,6 +182,9 @@
               />
               <div class="about-list--tumb">
                 <h3 class="about__list--title">Дизайнерские решения</h3>
+                <p class="about__list--text">
+                  Архитектура комфортных, функциональных и продуманных систем.
+                </p>
               </div>
             </li>
           </ul>
@@ -452,10 +469,10 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-contacts">
-          <a href="./index.html" class="footer-logo logo"
+          <a href="./index.html" class="footer-logo logo animate__heartBeat"
             ><span class="logo__word">Web</span>Studio</a
           >
-          <address>
+          <address id="contacts">
             <ul class="footer__list">
               <li class="footer__item">
                 <a href="" class="footer__link footer__link--map"
